@@ -1,3 +1,7 @@
+Version Next
+
+    - Added StreamWriterDelegate and EventWriterDelegate
+
 Version 1.0.794 Released December 11, 2013
 
     - Renamed SpringVaadinSession -> SpringVaadinSessionListener
